Adds support for replies to posts. Fixes #1.
