# routers/blog.js
@@ -2,14 +2,6 @@ var database = require('../client/database');
 var express = require('express');
 var router = express.Router();
 
-var origin = process.env.NODE_ENV === 'production' ? 'http://basic-blog-ui.mybluemix.net' : 'http://localhost:3000';
-
-router.all('/', (req, res, next) => {
-  res.header('Access-Control-Allow-Origin', origin);
-  res.header('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept');
-  next();
-});
-
 router.post('/', function(req, res) {
   if(!req.body || !req.body.text) {
     return res.status(400).send({code: '400', message: 'Missing required parameters.'});
@@ -31,19 +23,40 @@ router.post('/', function(req, res) {
       });
 
     }
-    // response is the doc._id from the insert.
+    // response is the doc from the insert.
     return database.get(response.id, function(err, resGet) {
       if(err) {
-        return res.status(response.code).send(response);
+        return res.status(resGet.code).send(resGet);
       }
 
       // Make the response similar to a retrieve all to ease the parsing on the UI side.
       var result = [];
       result.push({
+        id: resGet._id,
         modified: resGet.modified,
-        text: resGet.text
+        text: resGet.text,
+        replies: resGet.replies
       });
       return res.status(200).send({text: result});
+    });
+  });
+});
+
+router.patch('/:id', function(req, res) {
+  if(!req.body || !req.body.text) {
+    return res.status(400).send({code: '400', message: 'Missing required parameters.'});
+  }
+
+  return database.get(req.params.id, function(err, resGet) {
+    if(err) {
+      return res.status(resGet.code).send(resGet);
+    }
+    resGet.replies.push(req.body.text);
+    return database.update(resGet, resGet.replies, function(err, resUpdate) {
+      if(err) {
+        return res.status(resUpdate.code).send(resUpdate);
+      }
+      return res.status(204).send();
     });
   });
 
